--- a/Style.css
+++ b/Style.css
@@ -72,67 +72,69 @@ body {
     width: 40vh;
     height: 40vh;
     animation-duration: 13s;
+    animation-delay: 1s;
     z-index: 8;
 }
 
 .orbit-2 {
-    width: 60vh;
-    height: 60vh;
+    width: 50vh;
+    height: 50vh;
     animation-duration: 15s;
-    animation-direction: reverse;
+    animation-delay: 2s;
     z-index: 7;
 }
 
 .orbit-3 {
-    width: 80vh;
-    height: 80vh;
+    width: 70vh;
+    height: 70vh;
     animation-duration: 17s;
     z-index: 6;
 }
 
 .moon-orbit {
-    width: 12vh;
-    height: 12vh;
+    width: 6vh;
+    height: 6vh;
     position: absolute;
     top: 50%;
-    animation: planets-an 5s linear infinite;
+    animation: planets-an 6s linear infinite reverse;
 }
 
 .orbit-4 {
-    width: 100vh;
-    height: 100vh;
+    width: 85vh;
+    height: 85vh;
     animation-duration: 19s;
-    animation-direction: reverse;
+    animation-delay: 1.5s;
     z-index: 5;
 }
 
 .orbit-5 {
-    width: 125vh;
-    height: 125vh;
-    animation-duration: 21s;
+    width: 110vh;
+    height: 110vh;
     z-index: 4;
+    animation-duration: 19s;
+    animation-delay: 1.75s;
 }
 
 .orbit-6 {
-    width: 150vh;
-    height: 150vh;
+    width: 135vh;
+    height: 135vh;
     animation-duration: 23s;
-    animation-direction: reverse;
+    animation-delay: 1.30s;
     z-index: 3;
 }
 
 .orbit-7 {
-    width: 175vh;
-    height: 175vh;
+    width: 160vh;
+    height: 160vh;
     animation-duration: 25s;
+    animation-delay: 2.25s;
     z-index: 2;
 }
 
 .orbit-8 {
-    width: 195vh;
-    height: 195vh;
+    width: 185vh;
+    height: 185vh;
     animation-duration: 27s;
-    animation-direction: reverse;
     z-index: 1;
 }
 
@@ -143,31 +145,32 @@ body {
     position: absolute;
     top: 50%;
     animation: planets-an 20s linear infinite;
-    transition: border 0.5s;
+    transition: border 0.8s;
 }
 
 .sun {
-    width: 24vh;
-    height: 24vh;
+    width: 32vh;
+    height: 32vh;
     animation: sun-an 11s linear infinite;
 }
 
 .mercury {
-    width: 5vh;
+    width: 4vh;
+    animation-delay: 1s;
 }
 
 .venus {
-    width: 8vh;
+    width: 5.4vh;
+    animation-delay: 2s;
 }
 
 .earth {
-    width: 8vh;
+    width: 6vh;
 }
 
 .moon {
     width: 1.5vh;
     height: 1.5vh;
-    background-color: #fff;
     position: absolute;
     transform: translate(-50%, -50%);
     border-radius: 50%;
@@ -175,35 +178,40 @@ body {
 
 .mars {
     width: 5vh;
+    animation-delay: 1.5s;
 }
 
 .jupiter {
-    width: 15vh;
+    width: 12.5vh;
+    animation-delay: 1.75s;
 }
 
 .saturn {
-    width: 12vh;
+     width: 13.5vh;
+     animation-delay: 1.30s;
 }
 
 .uranus {
-    width: 11vh;
+    width: 9vh;
+    animation-delay: 2.25s;
 }
 
 .neptune {
-    width: 10vh;
+    width: 7vh;
     z-index: 50;
 }
 
 /* -------------------------------------- */
 /* --- Animation's --- */
 /* -------------------------------------- */
+
 @keyframes orbits-an {
     from {
-        transform: rotate(-10deg);
+        transform: rotate(200deg);
     }
 
     to {
-        transform: rotate(190deg);
+        transform: rotate(-10deg);
     }
 }
 
